# fly2040

./: .clang-format  .gitignore  .gitmodules  LICENSE  Makefile  README.md  clion.yaml
app/: README.md  build.sh
app/common/include/: buffer.hpp  cfg_item.h  common.hpp  config.hpp  constants.h  context.hpp  memstream.hpp  queue.hpp  sysrgb.h
app/manager/: Makefile  log.txt  mgrlog.txt
app/manager/src/: about_tab.cpp  about_tab.hpp  config_impl.hpp  cycle_tab.cpp  cycle_tab.hpp  debug_tab.cpp  debug_tab.hpp  file_utils.cpp  file_utils.hpp  load_tab.cpp  load_tab.hpp  main.cpp  main_activity.cpp  main_activity.hpp  memlog.hpp  pulse_tab.cpp  pulse_tab.hpp  rainbow_tab.cpp  rainbow_tab.hpp  settings_tab.cpp  settings_tab.hpp  temperature_tab.cpp  temperature_tab.hpp
app/overlay/: Makefile  README.md
app/sysmodule/: Makefile  README.md  config.json  toolbox.json
app/sysmodule/src/: config_impl.cpp  config_impl.hpp  cpu_mon.cpp  cpu_mon.hpp  file_utils.cpp  file_utils.h  gen_mon.cpp  gen_mon.hpp  main.cpp  sys_rgb_ipc.cpp  sys_rgb_ipc.hpp
doc/: README.md
firmware/: Makefile  README.md  monitor.py  test_i2c.py
firmware/boot2/: CMakeLists.txt  cbor.c  cbor.h  endian.h  main.c  tusb_config.h
firmware/boot2/pico-littlefs-lib/: .gitrepo  pico_hal.c
firmware/busk/: .gitrepo  CMakeLists.txt  Makefile
firmware/rp2040-i2c-interface/: .gitrepo
firmware/usk/: .gitignore  .gitrepo  CMakeLists.txt  board_detect.c  board_detect.h  boot_detect.c  config.c  config.h  glitch.c  leds.c  leds.h  main.c  misc.c  misc.h  payload.c  pins.h  prepare.py  ws2812.pio
firmware/usk/NanoCBOR/: .gitrepo
firmware/usk/pico-littlefs-lib/: README.md
firmware/wren/: .gitrepo
git-subrepo/: .gitrepo
pcb/: README.md  jlcpcb.kikit
pcb/cpu_flex/: cpu_flex.kicad_pcb  cpu_flex.kicad_pro  cpu_flex.kicad_sch  make_panel.sh
pcb/fly2040/: fly2040.kicad_pcb  fly2040.kicad_pro  fly2040.kicad_sch  make_panel.sh
pcb/fly2040/jlcpcb/: project.db
pcb/fly2040_ds/: fly2040_ds.kicad_pcb  fly2040_ds.kicad_pro  fly2040_ds.kicad_sch  fp-lib-table  make_panel.sh  panel_2_1.kicad_pcb  panel_2_1.kicad_pro
pcb/fly2040_ds/jlcpcb/: project.db
pcb/fly2040_leds/: fly2040_leds.kicad_pcb  fly2040_leds.kicad_pro  fly2040_leds.kicad_sch_old  fly2040_leds.rules  make_panel.sh  panel_10_1.kicad_pcb  panel_10_1.kicad_pro  panel_3_1.kicad_pcb  panel_3_1.kicad_pro  panel_50_1.kicad_pro  panel_5_1.kicad_pcb  panel_5_1.kicad_pro
pcb/fly2040_min/: fly2040_min.kicad_dru  fly2040_min.kicad_pcb  fly2040_min.kicad_pro  fly2040_min.kicad_sch  make_panel.sh  panel_2_1.kicad_pcb  panel_2_2.kicad_pcb  panel_2_2.kicad_pro  panel_3_3.kicad_pcb  panel_3_3.kicad_pro
pcb/fly2040_rgb/: #auto_saved_files#  fly2040_rgb.kicad_pcb  fly2040_rgb.kicad_pro  fly2040_rgb.kicad_sch_old  make_panel.sh  panel_3_3.kicad_pro  sym-lib-table  ~_autosave-fly2040_rgb.kicad_pcb.lck
pcb/kicad_lib/: flux_cap.kicad_mod  kicad_lceda.lib  kicad_lib.py
pcb/panel/: jlcpcb.kikit  make_panel.sh  panel_4_3.kicad_pro
pcb/usb_programmer/: README.md  sym-lib-table  usb_programmer-cache.lib  usb_programmer-rescue.kicad_sym  usb_programmer.kicad_pcb  usb_programmer.kicad_pro  usb_programmer.kicad_sch
(+517 files in other folders)
